// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Campaign Update Block with additional content as tweet snapshot test 1`] = `
<BlockWrapper
  shareLink="http://example.com/link-to-content"
  title="Campaign Update"
>
  <Markdown
    className="campaign-update__content -tweet"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus vestibulum.
  </Markdown>
  <Byline
    author="Braümhilda Snosages"
    avatar={Object {}}
    className="float-left"
    jobTitle="DoSomething.org Staff"
    share={null}
  />
  <Connect(Share)
    className="float-right clear-none"
    link="http://example.com/link-to-content"
    parentSource="campaign-update"
    variant="icon"
  />
</BlockWrapper>
`;

exports[`Campaign Update Block with additional content snapshot test 1`] = `
<BlockWrapper
  shareLink="http://example.com/link-to-content"
  title="Campaign Update"
>
  <h2>
    Heyo!
  </h2>
  <Markdown
    className="campaign-update__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
  </Markdown>
  <Byline
    author="Braümhilda Snosages"
    avatar={Object {}}
    className="float-left"
    jobTitle="DoSomething.org Staff"
    share={null}
  />
  <Connect(Share)
    className="float-right clear-none"
    link="http://example.com/link-to-content"
    parentSource="campaign-update"
    variant="icon"
  />
</BlockWrapper>
`;

exports[`Campaign Update Block with no additional content snapshot test 1`] = `
<BlockWrapper
  shareLink="http://example.com/link-to-content"
  title="Campaign Update"
>
  <h2>
    Heyo!
  </h2>
  <Markdown
    className="campaign-update__content"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
  </Markdown>
  <Connect(Share)
    className="float-right clear-none"
    link="http://example.com/link-to-content"
    parentSource="campaign-update"
    variant="icon"
  />
</BlockWrapper>
`;
